Adding e-mail support for blacklisted IPs/Countries

--- a/netstat-monitor.conf
+++ b/netstat-monitor.conf
@@ -5,6 +5,14 @@ connections_type=inet4
 # Use - https://www.virustotal.com/en/documentation/public-api/ for getting virustotal key
 virustotal_key=
 refresh_interval=1
+blacklist_countries = China,
+blacklist_ips =
+
+[e-mail]
+user=
+password=
+server=
+port=
 
 [proxy]
 user=
